# cacti

./: Cargo.toml  LICENSE-ISC  LICENSE-futhark  Makefile  README.md  bootstrap.sh  common.mk
cacti_cfg_env/: Cargo.toml
cacti_cfg_env/src/: lib.rs
cacti_cuffi/: Cargo.toml  Makefile
cacti_cuffi/src/: bindings.rs  lib.rs  types.rs
cacti_gpu_cu_ffi/: Cargo.toml
cacti_gpu_cu_ffi/src/: bindings.rs  lib.rs  types.rs
cacti_smp_c_ffi/: Cargo.toml
cacti_smp_c_ffi/src/: bindings.rs  lib.rs  types.rs
examples/: llama.rs  mnist.rs  open_llama_3b_deploy.rs  open_llama_3b_train.rs
src/: clock.rs  ctx.rs  lib.rs  nd.rs  op.rs  panick.rs  pmach.rs  prelude.rs  prelude_op.rs  ptr.rs  spine.rs
src/algo/: fp.rs  hash.rs  int.rs  mod.rs  str.rs  sync.rs
src/algo/str/: mod.rs  parse_size.rs
src/cell/: gpu.rs  mod.rs  smp.rs  swap.rs
src/librarium/: adamw.rs  llama.rs  lm.rs  mistral.rs  mod.rs  sentencepiece.rs  sgd.rs
src/pctx/: mod.rs  nvgpu.rs  smp.rs  swap.rs
src/pmach/: gpu.rs  mod.rs
src/thunk/: mod.rs  op.rs  ops.rs
src/util/: cell.rs  mmap.rs  mod.rs  safepickle.rs  safetensor.rs  stat.rs  time.rs  torch.rs
src/util/time/: default.rs  linux.rs  mod.rs
tools/: boot.rs  boot_array.rs  boot_deploy.rs  boot_train.rs  gen_macros.rs  inspect_pickle_bin.rs  inspect_pickle_dir.rs  inspect_pth.rs  inspect_tensors_dir.rs
