[package]
name = "cacti"
version = "0.1.0-devel"
edition = "2018"
authors = ["Peter Jin"]

[workspace]
members = [
    "cacti_cfg_env",
    "cacti_gpu_cu_ffi",
    "cacti_smp_c_ffi",
]

[profile.dev]
opt-level = 1
overflow-checks = true
panic = "abort"
#codegen-units = 1
#incremental = false
codegen-units = 256
incremental = true

[profile.release]
overflow-checks = true
panic = "abort"
codegen-units = 1
incremental = false

[features]
default = ["gpu", "librarium"]
gpu = ["nvgpu"]
nvgpu = ["cacti_gpu_cu_ffi"]
librarium = []

[dependencies]
aho_corasick = { path = "../aho_corasick", default-features = false, features = ["std"] }
byteorder = { path = "../byteorder" }
cacti_cfg_env = { path = "cacti_cfg_env" }
cacti_gpu_cu_ffi = { path = "cacti_gpu_cu_ffi", optional = true }
cacti_smp_c_ffi = { path = "cacti_smp_c_ffi" }
#fast_float = { path = "../fast_float" }
futhark_ffi = { path = "../futhark_ffi" }
#futhark_syntax = { path = "../futhark_syntax" }
glob = { path = "../glob" }
half = { path = "../half" }
home = { path = "../home" }
libc = { path = "../libc" }
once_cell = { path = "../once_cell" }
repugnant_pickle = { path = "../repugnant_pickle" }
rustc_serialize = { path = "../rustc_serialize" }
#ryu = { path = "../ryu" }
safetensor_serialize = { path = "../safetensor_serialize" }
sentencepiece_ffi = { path = "../sentencepiece_ffi" }
smol_str = { path = "../smol_str", default-features = false }

#[dev-dependencies]
#dessert = { path = "../dessert" }

[[bin]]
name = "inspect_pth"
path = "tools/inspect_pth.rs"

#[[bin]]
#name = "boot"
#path = "tools/boot.rs"

#[[bin]]
#name = "boot_array"
#path = "tools/boot_array.rs"

[[bin]]
name = "boot_deploy"
path = "tools/boot_deploy.rs"

[[bin]]
name = "boot_train"
path = "tools/boot_train.rs"

[[bin]]
name = "gen_macros"
path = "tools/gen_macros.rs"
