[package]
name = "cacti"
version = "0.1.0-devel"
edition = "2018"
authors = ["Peter Jin"]

[workspace]
members = [
	"cacti_cfg_env",
	"cacti_gpu_cu_ffi",
	"cacti_smp_c_ffi",
]

[profile.dev]
opt-level = 1
overflow-checks = true
panic = "abort"
#codegen-units = 1
#incremental = false
codegen-units = 256
incremental = true

[profile.release]
debug = true
overflow-checks = true
panic = "abort"
codegen-units = 1
incremental = false
lto = "thin"

[features]
default = [
	"gpu",
	"librarium",
	"sentencepiece",
]
gpu = ["nvgpu"]
nvgpu = ["cacti_gpu_cu_ffi"]
librarium = []
sentencepiece = ["librarium", "sentencepiece_ffi"]

[dependencies]
aho_corasick = { path = "../aho_corasick", default-features = false, features = ["std"] }
byteorder = { path = "../byteorder" }
cacti_cfg_env = { path = "cacti_cfg_env" }
cacti_gpu_cu_ffi = { path = "cacti_gpu_cu_ffi", optional = true }
cacti_smp_c_ffi = { path = "cacti_smp_c_ffi" }
cell_split = { path = "../cell_split" }
futhark_ffi = { path = "../futhark_ffi" }
glob = { path = "../glob" }
half = { path = "../half" }
home = { path = "../home" }
libc = { path = "../libc" }
once_cell = { path = "../once_cell" }
repugnant_pickle = { path = "../repugnant_pickle" }
rustc_serialize = { path = "../rustc_serialize" }
sentencepiece_ffi = { path = "../sentencepiece_ffi", optional = true }
smol_str = { path = "../smol_str", default-features = false }

[[bin]]
name = "inspect_pickle_bin"
path = "tools/inspect_pickle_bin.rs"

[[bin]]
name = "inspect_pickle_dir"
path = "tools/inspect_pickle_dir.rs"

# For internal development:

#[[bin]]
#name = "gen_macros"
#path = "tools/gen_macros.rs"
