[package]
name = "cacti_gpu_cu_ffi"
version = "0.1.0-devel"
license = "MIT OR Apache-2.0"
edition = "2018"
workspace = ".."

[features]
default = []
experimental = []

[dependencies]
cacti_cfg_env = { path = "../cacti_cfg_env" }
libc = { path = "../../libc" }
libloading = { path = "../../libloading" }
once_cell = { path = "../../once_cell" }
